refactor: 관리자 스케줄 생성 및 Theme 생성 로직 반환 타입 수정